tests/snapshots/test_cli__can_execute_make_with_valid_syntax_repeated_targets.snap
---
source: tests/test_cli.rs
info:
  program: mk
  args:
    - test
---
success: true
exit_code: 0
----- stdout -----
This is a test var: success

----- stderr -----
