tests/snapshots/test_cli__can_parse_help_from_includes.snap
---
source: tests/test_cli.rs
info:
  program: mk
  args:
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
An experimental command-line wrapper for GNU Make.

Usage: mk [OPTIONS] [COMMAND]

Commands:
  test      Parent test target
  included  Included test target

Options:
      --me       Run an internal `mk` command
  -h, --help     Print help
  -V, --version  Print version

----- stderr -----
