tests/snapshots/test_cli__can_run_included_commands_from_a_subfolder.snap
---
source: tests/test_cli.rs
info:
  program: mk
  args:
    - included
---
success: true
exit_code: 0
----- stdout -----
This is another successful test.

----- stderr -----
