tests/snapshots/test_cli__knows_its_calling_current_working_directory.snap
---
source: tests/test_cli.rs
info:
  program: mk
  args:
    - cwd
---
success: true
exit_code: 0
----- stdout -----
Called in: workspace
Called from: subdir

----- stderr -----
