tests/snapshots/test_cli__prints_minimal_help_if_makefile_is_empty_and_no_args_given.snap
---
source: tests/test_cli.rs
info:
  program: mk
  args: []
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
An experimental command-line wrapper for GNU Make.

Usage: mk [OPTIONS]

Options:
      --me       Run an internal `mk` command
  -h, --help     Print help
  -V, --version  Print version
