tests/snapshots/test_cli__shows_help_with_documentation.snap
---
source: tests/test_cli.rs
info:
  program: mk
  args:
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
An experimental command-line wrapper for GNU Make.

Usage: mk [OPTIONS] [COMMAND]

Commands:
  test  Runs the tests

Options:
      --me       Run an internal `mk` command
  -h, --help     Print help
  -V, --version  Print version

----- stderr -----
