tests/snapshots/test_cli__shows_make_error_if_an_invalid_target_is_used.snap
---
source: tests/test_cli.rs
info:
  program: mk
  args:
    - invalid
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
make[1]: *** No rule to make target `invalid'.  Stop.
