tests/snapshots/test_cli__uses_env_vars_passed_as_arguments.snap
---
source: tests/test_cli.rs
info:
  program: mk
  args:
    - test
    - ENVVAR=success
---
success: true
exit_code: 0
----- stdout -----
ENVVAR is success.

----- stderr -----
