tests/snapshots/test_cli__uses_env_vars_preceding_the_command.snap
---
source: tests/test_cli.rs
info:
  program: mk
  args:
    - test
  env:
    ENVVAR: success
---
success: true
exit_code: 0
----- stdout -----
ENVVAR is success.

----- stderr -----
